--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,10 +9,9 @@
     <!-- As the main content view, the view below consumes the entire
          space available using match_parent in both dimensions.
           MainActivity的内容布局-->
-    <FrameLayout android:id="@+id/container"
+    <include layout="@layout/content_main"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-    </FrameLayout>
+        android:layout_height="match_parent"/>
     <!-- android:layout_gravity="start" tells DrawerLayout to treat
          this as a sliding drawer on the left side for left-to-right
          languages and on the right side for right-to-left languages.
