添加新的功能

--- a/app/src/main/res/layout/fragment_style.xml
+++ b/app/src/main/res/layout/fragment_style.xml
@@ -144,7 +144,10 @@
                     android:layout_marginTop="10dp"
                     style="@android:style/Widget.Material.Spinner.Underlined"
                     android:layout_width="200dp"
-                    android:layout_height="50dp"></Spinner>
+                    android:spinnerMode="dropdown"
+                    android:layout_height="50dp">
+
+            </Spinner>
             <!--计时器-->
             <Chronometer
                     android:layout_marginTop="10dp"
